# village-tui

./: Cargo.toml  README.md  log  log1  log2
assets/: content.g  content.txf  content_text.g  home.txf  my_home.txf  neighbor.txf  sel_content.txf  sel_field.txf  sel_home.txf  sel_my_home.txf  sel_neighbor.txf  transparent.txf
src/: config.rs  input.rs  main.rs  tui.rs
src/catalog/logic/: mod.rs
src/catalog/tui/: ask.rs  button.rs  content_creator.rs  context_menu.rs  editor.rs  indexer.rs  mod.rs  notifier.rs  option.rs  selector.rs  tile.rs  viewer.rs
src/common/: mod.rs  poledit.rs
src/forum/: mod.rs
src/forum/logic/: message.rs  mod.rs
src/forum/tui/: mod.rs
src/logic/: manifest.rs  mod.rs
src/tui/: ask.rs  button.rs  content_creator.rs  context_menu.rs  editor.rs  indexer.rs  manifest.rs  mod.rs  notifier.rs  selector.rs  tag.rs  tile.rs  viewer.rs
