[package]
name = "village-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
animaterm = {path = "/home/dxtr/projects/animaterm"}
dapp-lib = {path = "/home/dxtr/projects/dapp-lib"}

[dependencies.async-std]                                                        
   version = "1.12"                                                               
   features = ["attributes"]  
